third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_field_full.exp

Diagnostics:
error: cannot copy mutable reference in local `inner` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full.move:32:18
   │
31 │         let c = freeze(inner);
   │                 ------------- previous call result
32 │         let f1 = &inner.f1;
   │                  ^^^^^^^^^ copied here

error: cannot copy mutable reference in local `inner` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full.move:34:9
   │
31 │         let c = freeze(inner);
   │                 ------------- previous call result
32 │         let f1 = &inner.f1;
   │                  --------- previous field borrow
33 │         *c;
34 │         *inner;
   │         ^^^^^^ copied here

error: cannot copy mutable reference in local `inner` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full.move:41:18
   │
40 │         let c = id(freeze(inner));
   │                 -----------------
   │                 │  │
   │                 │  previous call result
   │                 used by call result
41 │         let f1 = &inner.f1;
   │                  ^^^^^^^^^ copied here

error: cannot copy mutable reference in local `inner` which is still borrowed
   ┌─ tests/reference-safety/v1-tests/borrow_field_full.move:43:9
   │
40 │         let c = id(freeze(inner));
   │                 -----------------
   │                 │  │
   │                 │  previous call result
   │                 used by call result
41 │         let f1 = &inner.f1;
   │                  --------- previous field borrow
42 │         *c;
43 │         *inner;
   │         ^^^^^^ copied here
